# Project-foundry

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  VISION.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  foundry.dogfood.yaml  foundry.example.yaml  pyproject.toml
.github/workflows/: ci.yml  dotnet.yml  foundry-claude-code.yml  release.yml
docs/: dogfooding.md  quickstart.md
docs/plans/: phase1-context-enrichment.md
dotnet/: Foundry.sln  README.md
dotnet/src/Foundry/: Foundry.csproj  Observability.cs
dotnet/src/Foundry.Demo/: Foundry.Demo.csproj  Program.cs
dotnet/src/Foundry/Agents/: ClaudeCode.cs  Cursor.cs  Manual.cs  Provider.cs  Registry.cs  Webhook.cs
dotnet/src/Foundry/Audit/: Events.cs
dotnet/src/Foundry/Configuration/: Settings.cs
dotnet/src/Foundry/Connectors/: Comments.cs  IssueTracker.cs
dotnet/src/Foundry/Db/: FoundryDbContext.cs  Models.cs
dotnet/src/Foundry/Engines/: Analyzer.cs  Enrichment.cs  Llm.cs  Planner.cs  Risk.cs
dotnet/src/Foundry/Orchestration/: Drivers.cs  FoundryOrchestrator.cs
dotnet/src/Foundry/Policy/: PolicyEngine.cs
dotnet/src/Foundry/Schemas/: Agent.cs  Analysis.cs  Common.cs  Context.cs  FoundryJson.cs  Plan.cs  Pr.cs  Risk.cs  Ticket.cs  Wire.cs
dotnet/tests/Foundry.Tests/: AgentProviderTests.cs  AuditTests.cs  ConfigTests.cs  DriverTests.cs  EngineTests.cs  Foundry.Tests.csproj  OrchestratorTests.cs  PolicyEngineTests.cs  SchemaTests.cs  TestData.cs
examples/: claude-code-runner.yml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_agent_job_cost.py  0003_repo_catalog.py  0004_run_outcomes.py  0005_catalog_code_facts.py  0006_one_active_run_per_issue.py  0007_agent_job_repo_width.py  0008_audit_sequence_unique.py  0009_run_outcome_provider.py  0009_webhook_deliveries.py  0010_webhook_deliveries.py  0011_run_parent_id.py  0012_audit_event_content_hash.py  0013_org_id_multi_tenancy.py  0014_scim_provisioning.py
scripts/: demo.py  policy_parity.py  smoke_e2e.py  smoke_e2e_github.py  wait_for_temporal.py
src/foundry/: __init__.py  config.py  drivers.py  epics.py  observability.py  orchestrator.py
src/foundry/agents/: __init__.py  claude_code.py  cursor.py  manual.py  provider.py  registry.py  webhook.py
src/foundry/api/: __init__.py  app.py  dashboard.py  dedup.py  mapping.py  oidc.py  oidc_login.py  ratelimit.py  scim.py  security.py  sessions.py  slack.py  store.py  teams.py  tenant.py  webhook_org.py
src/foundry/audit/: __init__.py  events.py
src/foundry/catalog/: __init__.py  cli.py  code_facts.py  sync.py
src/foundry/compliance/: __init__.py  cli.py  controls.py  evidence.py  pdf.py
src/foundry/connectors/: __init__.py  base.py  comments.py  github.py  github_issues.py  gitlab.py  jira.py  linear.py  notify.py  slack.py  teams.py  transport.py
src/foundry/db/: __init__.py  base.py  cli.py  encryption.py  maintenance.py  models.py  tenant.py
src/foundry/engines/: __init__.py  analyzer.py  code_context.py  decomposition.py  enrichment.py  llm.py  llm_decomposition.py  llm_plan_satisfaction.py  llm_planner.py  llm_risk.py  openai_analyzer.py  planner.py  risk.py
src/foundry/memory/: __init__.py  cli.py  metrics.py  outcomes.py  priors.py  scorecards.py
src/foundry/policy/: __init__.py  cli.py  engine.py  foundry.rego  foundry_test.rego  freeze.py  overlay.py
src/foundry/schemas/: __init__.py  agent.py  analysis.py  common.py  context.py  plan.py  pr.py  risk.py  ticket.py
src/foundry/workflows/: __init__.py  activities.py  activity_options.py  decisions.py  worker.py  workflow.py
tests/: conftest.py  test_agent_provider.py  test_api.py  test_approval_queue.py  test_artifact_encryption.py  test_artifact_reencrypt.py  test_audit.py  test_catalog_cli.py  test_catalog_enricher.py  test_catalog_sync.py  test_change_freeze.py  test_code_enricher.py  test_code_facts.py  test_compliance.py  test_compliance_cli.py  test_compliance_pdf.py  test_config.py  test_connectors.py  test_cursor_provider.py  test_db.py  test_decomposition.py  test_drivers.py  test_e2e_smoke.py  test_engines.py  test_epics.py  test_execution_queue.py  test_failure_queue.py  test_failure_trends.py  test_failures_by_category.py  test_failures_by_category_trends.py  test_failures_by_repo.py  test_failures_by_repo_trends.py  test_failures_by_work_type.py  test_failures_by_work_type_trends.py  test_github_connector.py  test_github_issues_tracker.py  test_gitlab_scm.py  test_jira_tracker.py  test_llm_decomposition.py  test_llm_planner.py  (+53 more)
tests/data/: policy_vectors.json
tests/fixtures/: README.md  github_check_suite_failed.json  github_codeowners_contents.json  github_issue_comment_approve.json  github_issue_labeled.json  github_package_json_contents.json  github_pull_request_opened.json  github_pyproject_contents.json  github_review_changes_requested.json  github_tree_recursive.json  github_tree_truncated.json  gitlab_merge_request_opened.json  gitlab_mr_diffs.json  gitlab_pipeline_failed.json  jira_comment_approve.json  jira_issue_labeled.json  linear_comment_approve.json  linear_issue_labeled.json  slack_block_action_approve.json  slack_post_message_approval.json  teams_card_approval.json  teams_outgoing_webhook_approve.json
