[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-foundry"
version = "0.1.0"
description = "Project Foundry - the engineering control plane. Module 1: Ticket-to-PR."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Project Foundry contributors" }]

# Core dependencies are deliberately minimal so the testable foundation
# runs without external infrastructure (no Temporal/OPA/LangGraph servers).
dependencies = [
    "pydantic>=2.6,<3",
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Live infrastructure adapters. Not required for the core foundation tests.
workflow = [
    "temporalio>=1.5",
    "langgraph>=0.2",
]
# LLM-backed engines (OpenAI / GPT-5.5). Not required for the heuristic default.
llm = [
    "openai>=1.40",
]
# Live HTTP transports for the Linear/GitHub connectors.
http = [
    "httpx>=0.27",
]
# OpenTelemetry tracing. Foundry runs fine (no-op spans) without it.
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
server = [
    "uvicorn[standard]>=0.29",
]
# Postgres driver + schema migrations for production deployments.
postgres = [
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"foundry.policy" = ["*.rego"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "e2e: live end-to-end smoke tests against real services (opt-in, never CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
