[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-foundry"
version = "1.4.0"
description = "The governance layer for AI coding agents: raw tickets in, reviewed pull requests out, every decision policy-gated and audited."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Project Foundry contributors" }]
keywords = [
    "ai-agents",
    "agentic-engineering",
    "sdlc",
    "governance",
    "policy",
    "code-review",
    "devops",
    "automation",
    "linear",
    "jira",
    "github",
    "gitlab",
    "cursor",
    "claude",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: FastAPI",
]

# Core dependencies are deliberately minimal so the testable foundation
# runs without external infrastructure (no Temporal/OPA/LangGraph servers).
dependencies = [
    "pydantic>=2.6,<3",
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Live infrastructure adapters. Not required for the core foundation tests.
workflow = [
    "temporalio>=1.5",
    "langgraph>=0.2",
]
# LLM-backed engines (OpenAI / GPT-5.5). Not required for the heuristic default.
llm = [
    "openai>=1.40",
]
# Live HTTP transports for the Linear/GitHub connectors.
http = [
    "httpx>=0.27",
]
# OIDC bearer-token auth for the API (issue #34). Optional and lazily imported:
# the default static-token auth path - and the offline core - never need it.
oidc = [
    "pyjwt[crypto]>=2.7",
]
# PDF rendering for compliance evidence packs (issue #36). Pure-Python (no
# system binary, no network), optional and lazily imported: the JSON/HTML
# exports and the offline core never need it.
pdf = [
    "fpdf2>=2.7",
]
# OpenTelemetry tracing. Foundry runs fine (no-op spans) without it.
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
server = [
    "uvicorn[standard]>=0.29",
]
# Postgres driver + schema migrations for production deployments.
postgres = [
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.7",
    "fpdf2>=2.7",
]

[project.scripts]
foundry-catalog = "foundry.catalog.cli:main"
foundry-evidence = "foundry.compliance.cli:main"
foundry-memory = "foundry.memory.cli:main"
foundry-policy = "foundry.policy.cli:main"

[project.urls]
Homepage = "https://github.com/JeremySNR/Project-foundry"
Repository = "https://github.com/JeremySNR/Project-foundry"
Issues = "https://github.com/JeremySNR/Project-foundry/issues"
Documentation = "https://github.com/JeremySNR/Project-foundry/blob/main/docs/quickstart.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"foundry.policy" = ["*.rego"]
"foundry.policy.library" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "e2e: live end-to-end smoke tests against real services (opt-in, never CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
